--- a/package.json
+++ b/package.json
@@ -1,4 +1,4 @@
-{
+
   "name": "thrifttech-email-backend",
   "version": "1.0.0",
   "description": "Backend email service for ThriftTech verification emails",
@@ -6,6 +6,7 @@
   "scripts": {
     "start": "node server.js",
     "dev": "nodemon server.js",
+    "build": "echo 'No build step needed'",
     "test": "node -e \"console.log('Backend server ready!')\""
   },
   "dependencies": {
@@ -14,19 +15,10 @@
     "cors": "^2.8.5",
     "dotenv": "^16.3.1"
   },
-  "devDependencies": {
-    "nodemailer": "^6.9.8"
-  },
   "engines": {
     "node": ">=18.0.0"
   },
-  "keywords": [
-    "email",
-    "verification",
-    "smtp",
-    "gmail",
-    "thrifttech"
-  ],
+  "keywords": ["email", "verification", "smtp", "gmail", "thrifttech"],
   "author": "ThriftTech",
   "license": "MIT"
 }
